# video-moment-retrieval

./: .gitignore  README.md  playground.ipynb  pyproject.toml  requirements.txt  test_public.py  tests.ipynb  train.ipynb
video_moment_retrieval/datasets/: qv_highlights.py  qv_higlights.py
video_moment_retrieval/detr_matcher/: matcher.py
video_moment_retrieval/eval/: eval.py
video_moment_retrieval/feature_extraction/: clip_extractor.py  frame_extractor.py  resnet_extractor.py
video_moment_retrieval/moment_detr/: model.py
video_moment_retrieval/qd_detr/: model.py
video_moment_retrieval/testing/: configuration_dd.py  dataset.py  double_decoder.py  modeling_dd.py  train_dd.ipynb  vivit_model.py
video_moment_retrieval/utils/: eval.py  logging.py  utils.py
